--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 								<p>3nds - 3 Nice Dear Students</p>
 								<p>Not Ending but 3nding</p>
 								<p>Have fun while learning!</p>
-								<p>To acess site go to: francisvale.github.io</p>
+								<p>To access site go to: francisvale.github.io</p>
 								<ul class="actions">
 									<li><a href="#" class="button">Learn More</a></li>
 								</ul>
